# mog-excel-to-pdf

./: README.md  pyproject.toml  run_mog_excel_to_pdf.bat  sample_config.toml  sample_config.yml
src/mog_excel_to_pdf/: __main__.py
tests/resources/: no_content_3_1_2_8.xlsx  no_content_6_4_5_7.xlsx  sheet_3_1_2.xlsm  sheet_3_1_2.xlsx  sheet_3_1_2_8.xlsx  sheet_6_4_5_7.xlsx
