[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mog-excel-to-pdf"
version = "0.1.0"
description = "Excel の複数シートをグループ選択して PDF に出力するツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0.0",
    "pypdf2>=3.0.1",
    "pywin32>=311",
]

[project.scripts]
mog-excel-to-pdf = "mog_excel_to_pdf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mog_excel_to_pdf"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
